test/tests/bad/cast-poly.carth
;; NoClassInstance

(defun foo [a] :of (forall (a b) (Fun [a] b))
  (cast a))
